# konto-beans

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/config/: editor.ini
assets/shaders/: basic-texture.glsl  basic.glsl  flat.glsl
assets/shaders/2D/: circle.glsl  line.glsl  quad.glsl
include/: konto.h
include/konto/components/: common.h  physics.h  renderer2d.h
include/konto/core/: camera.h  context.h  entity.h  event.h  input.h  scene.h  timestep.h  uuid.h
include/konto/scene/: scene.h
include/konto/serialization/: components.h  scene.h  serialization.h
src/editor/: application.cc  application.h  context.h  editor.cc  editor.h  window.cc  window.h
src/editor/menus/: dialogs.cc  dialogs.h  main.cc  main.h
src/editor/panels/: inspector.cc  inspector.h  scene.cc  scene.h  simulation.cc  simulation.h  viewport.cc  viewport.h
src/konto/core/: camera.cc  event.cc  scene.cc  uuid.cc
src/konto/scene/: scene.cc
src/konto/serialization/: components.cc  scene.cc  serialization.cc
src/schemas/: components.fbs  scene.fbs
src/shaders/: flat.glsl
src/shaders/2D/: line.glsl
